<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_blue_bright"
        android:gravity="start"
        android:text="@string/str1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:text="@string/str2"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/tv3"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_purple"
        android:gravity="center_horizontal"
        android:text="@string/str3"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/tv4"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_red_light"
        android:gravity="end"
        android:text="@string/str4"
        app:layout_constraintTop_toBottomOf="@id/tv3"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/tv5"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:background="@android:color/holo_green_light"
        android:text="@string/str5"
        app:layout_constraintTop_toBottomOf="@id/tv4"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/tv6"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_purple"
        android:text="@string/str6"
        app:layout_constraintTop_toBottomOf="@id/tv5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/tv7"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_red_light"
        android:text="@string/str7"
        app:layout_constraintTop_toBottomOf="@id/tv6"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>